docs: add response types
